ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: infy
spec: {}
status: {}
