daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: my-daemonset
spec:
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: fluentd
          image: fluentd:latest
          resources:
            limits:
              memory: "200Mi"
              cpu: "0.5"
