deploy_volume.yaml
# deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app-container
        image: nginx  # Replace with your application's image
        ports:
        - containerPort: 9093  # This matches the targetPort in the Service
        volumeMounts:
        - mountPath: "/data"  # Path inside the container where the volume will be mounted
          name: app-storage
      volumes:
      - name: app-storage
        persistentVolumeClaim:
          claimName: app-pvc
