init_container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init-pod 
  labels:
    app: my-app
spec:
  containers:
  - name: main-container
    image: nginx
    ports:
    - containerPort: 80
