pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: testpods
  name: testpods
  namespace: infy
spec:
  containers:
  - image: adikarthik/demo
    name: testpods
    ports:
    - containerPort: 9090
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
