clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterip-service
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 8081        # Service port
      targetPort: 9091  # Pod port
  type: ClusterIP
