nodeportsvs.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-service
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 8082        # Service port
      targetPort: 9092  # Pod port
      nodePort: 30009   # NodePort (optional)
  type: NodePort
